k8s/base/admin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghanawaters-admin
  labels:
    app: ghanawaters-admin
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghanawaters-admin
  template:
    metadata:
      labels:
        app: ghanawaters-admin
    spec:
      containers:
      - name: ghanawaters-admin
        image: ghcr.io/ghananauticalnfo/ghanawaters-admin:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
